# repositorioprueba

./: Arma.cpp  Arma.h  BolaDeFuego.cpp  BolaDeFuego.h  CMakeLists.txt  ConfiguracionesJuego.cpp  ConfiguracionesJuego.h  Curar.cpp  Curar.h  Enemigo.cpp  Enemigo.h  Entidad.cpp  Entidad.h  Goblin.cpp  Goblin.h  Guerrero.cpp  Guerrero.h  Habilidades.cpp  Habilidades.h  Item.cpp  Item.h  Mago.cpp  Mago.h  NewInventario.cpp  NewInventario.h  Orco.cpp  Orco.h  Personaje.cpp  Personaje.h  Pocion.cpp  Pocion.h  inventario.cpp  inventario.h  main.cpp
